# matsutaku-library

./: .gitignore  CMakeLists.txt  LICENSE.txt  Pipfile  README.md  index.md  requirements.txt
test/: CMakeLists.txt  abc116-c-multiple_sequences-dirichlet-optimized.cpp  abc116-c-multiple_sequences-dirichlet-optimized.cpp.md  abc116-c-multiple_sequences-dirichlet-optimized.test.cpp  abc116-c-multiple_sequences-dirichlet.cpp  abc116-c-multiple_sequences-dirichlet.cpp.md  abc116-c-multiple_sequences-dirichlet.test.cpp  aoj-do_use_segment_tree-balanced_tree.test.cpp  aoj-do_use_segment_tree-balanced_tree.test.cpp.md  aoj-do_use_segment_tree-binary_tree.test.cpp  aoj-do_use_segment_tree-binary_tree.test.cpp.md  aoj-range_update_query.test.cpp.md  aoj-the_maximum_number_of_customers.test.cpp  aoj-the_maximum_number_of_customers.test.cpp.md  aoj-time_table-cht.test.cpp  aoj-time_table-cht.test.cpp.md  binary_trie_test.cpp  binary_trie_test.cpp.md  bitmap_test.cpp  bitmap_test.cpp.md  clz.cpp  clz.cpp.md  clz_test.cpp  combination.cpp  combination.cpp.md  convolution.test.cpp  convolution.test.cpp.md  decalt_tree_right_path_to_children_construction_test.cpp  dijkstra.test.cpp  dijkstra.test.cpp.md  dijkstra_fibonacci.test.cpp  dijkstra_fibonacci.test.cpp.md  double_ended_priority_queue_test.cpp  double_ended_priority_queue_test.cpp.md  fibonacci_heap_test.cpp  fibonacci_heap_test.cpp.md  integer_set_test.cpp  integer_set_test.cpp.md  manyplus.cpp  manyplus.cpp.md  (+61 more)
test/aoj/: aoj-do_use_segment_tree-balanced_tree.test.cpp  aoj-do_use_segment_tree-balanced_tree.test.cpp.md  aoj-do_use_segment_tree-binary_tree.test.cpp  aoj-do_use_segment_tree-binary_tree.test.cpp.md  aoj-range_update_query.test.cpp  aoj-range_update_query.test.cpp.md  aoj-the_maximum_number_of_customers.test.cpp  aoj-the_maximum_number_of_customers.test.cpp.md  aoj-time_table-cht.test.cpp  aoj-time_table-cht.test.cpp.md  dijkstra.test.cpp  dijkstra.test.cpp.md  dijkstra_fibonacci.test.cpp  dijkstra_fibonacci.test.cpp.md  maximum_flow_dinic.test.cpp  maximum_flow_dinic.test.cpp.md  maximum_flow_ford_fulkerson.test.cpp  maximum_flow_ford_fulkerson.test.cpp.md  min_cost_flow.test.cpp  min_cost_flow.test.cpp.md  scc.test.cpp  scc.test.cpp.md
test/atcoder/: abc116-c-multiple_sequences-dirichlet-optimized.test.cpp  abc116-c-multiple_sequences-dirichlet.test.cpp  abc213-g-connectivity2.cpp  abc236-ex-distinct_multiples.cpp  abc253-ex-we_love_forest.cpp  abc294-ex-k_coloring-tle_solution.cpp  abc294-ex-k_coloring.cpp  abc306-ex-balance_scale.cpp  arc105-f-lights_out_on_connected_graph.cpp  tenka1-2016-final-open-e.cpp  xmas-contest-2020-h-hieralchical_phylogeny.cpp  xmas-contest-2022-f-fast_as_fast_as_ryzer.cpp
test/standalone/: binary_trie.test.cpp  binary_trie_set_test.cpp  binary_trie_test.cpp  bitmap_test.cpp  clz_test.cpp  combination_test.cpp  decalt_tree_right_path_to_children_construction_test.cpp  double_ended_priority_queue_test.cpp  fibonacci_heap_test.cpp  integer_set_test.cpp  manyplus.cpp  manyplus.test.cpp  modular.cpp  persistent_array_test.cpp  persistent_stack_test.cpp  plus.test.cpp  popcnt_test.cpp  set_test_test.cpp  skewbinary_list_test.cpp  skiplist_set_test.cpp  tenka1-2016-final-open-e.cpp  treap_test.cpp  xft_test.cpp  yft_test.cpp
test/string/: ac_machine_test.cpp  ac_machine_test.cpp.md  dynamic_ac_machine_test.cpp  dynamic_ac_machine_test.cpp.md  suffix_array.test.cpp  (+3 more)
(+313 files in other folders)
